web-infras/parser/tests/fixtures/babel/jsx/errors/_no_plugin/output.txt
[SyntaxError]: This experimental syntax requires enabling jsx plugins. (1,1)
1|<div></div>
 |^
